--- a/git_example/contact.html
+++ b/git_example/contact.html
@@ -33,15 +33,15 @@
 <body>
 <!--Navbar-->
 <nav class="navbar navbar-expand-sm bg-body-tertiary"><!--Navbar-->
-  <a class="d-flex justify-content-center heading" href="#" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
+  <a class="d-flex justify-content-center heading" href="main.html" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
   <div class="container-fluid">
     <div class="other-buttons">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active pt-3" aria-current="page" href="#">Profile</a>
+          <a class="nav-link active pt-3" aria-current="page" href="profile1.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active pt-3" aria-current="page" href="about_us.html">About Us</a>
+          <a class="nav-link active pt-3" aria-current="page" href="aboutus.html">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active pt-3" aria-current="page" id="contact-container" href="contact.html">Contact</a>
@@ -56,10 +56,10 @@
         </button>
         <ul class="dropdown-menu" style="width: 17.25vw; padding-left: 2.25rem; background: none; border: none" data-popper-placement="bottom-start">
           <li>
-            <a href="#" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-info"></i>Info</a>
+            <a href="profile1.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-info"></i>Info</a>
           </li>
           <li>
-            <a href="#" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-list-check"></i>Tasks</a>
+            <a href="individual_tasks.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-list-check"></i>Tasks</a>
           </li>
       </div>
       <div class="resized-exit-button ms-auto">
