--- a/git_example/individual_tasks.html
+++ b/git_example/individual_tasks.html
@@ -28,7 +28,7 @@
   <!--Sidebar-->
   <div class="d-flex flex-row">
     <div class="sidebar d-flex flex-column flex-shrink-0">
-      <a class="d-flex justify-content-center heading" href="#" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
+      <a class="d-flex justify-content-center heading" href="mainpage.html" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
       <div class="dropdown">
         <button class="d-flex justify-content-around btn mt-2" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 70%; height: 3.063rem; border-radius: 15px; font-family: 'Inter', sans-serif; background-color: rgba(161, 95, 244, 1); color: rgba(255, 255, 255, 1); box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.263); font-size: 1.25rem; align-items: center;">
           <i class="fa-solid fa-bars"></i>
@@ -65,7 +65,7 @@
           <div class="other-buttons">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" id="profile-container" href="#">Profile</a>
+                <a class="nav-link active" aria-current="page" id="profile-container" href="profile1.html">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active pt-3" aria-current="page" href="about_us.html">About Us</a>
@@ -84,10 +84,10 @@
               </button>
               <ul class="dropdown-menu" style="width: 17.25vw; padding-left: 2.25rem; background: none; border: none" data-popper-placement="bottom-start">
                 <li>
-                  <a href="#" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-info"></i>Info</a>
+                  <a href="profile1.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><img src="newspaper.png"></img> News</a>
                 </li>
                 <li>
-                  <a href="#" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-list-check"></i>Tasks</a>
+                  <a href="individual_tasks.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-list-check"></i>Tasks</a>
                 </li>
             </div>
             <div class="resized-exit-button ms-auto">
