--- a/git_example/main.html
+++ b/git_example/main.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>General Tasks - MyWork</title>
+    <title>Main Page - MyWork</title>
     <!--Css Import-->
     <link rel="stylesheet" href="general_tasks.css">
+    <link rel="stylesheet" href="mainpage.css">
     <!--Bootstrap Import-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -18,6 +19,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Mohave:wght@500&family=Montserrat:wght@400;600;700&family=Poppins&family=Raleway:wght@700&display=swap" rel="stylesheet">
     <!--Font Awsome Icon Import-->
     <script src="https://kit.fontawesome.com/16ec105c16.js" crossorigin="anonymous"></script>
@@ -28,7 +32,7 @@
   <!--Sidebar-->
   <div class="d-flex flex-row">
     <div class="sidebar d-flex flex-column flex-shrink-0">
-      <a class="d-flex justify-content-center heading" href="mainpage.html" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
+      <a class="d-flex justify-content-center heading" href="main.html" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
       <div class="dropdown">
         <button class="d-flex justify-content-around btn mt-2" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 70%; height: 3.063rem; border-radius: 15px; font-family: 'Inter', sans-serif; background-color: rgba(161, 95, 244, 1); color: rgba(255, 255, 255, 1); box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.263); font-size: 1.25rem; align-items: center;">
           <i class="fa-solid fa-bars"></i>
@@ -36,7 +40,7 @@
         </button>
         <ul class="dropdown-menu" style="width: 17.25vw; padding-left: 2.25rem; background: none; border: none" data-popper-placement="bottom-start">
           <li>
-            <a href="profile1.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-info"></i>Info</a>
+            <a href="profile1.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><img src="newspaper.png"></img> News</a>
           </li>
           <li>
             <a href="general_tasks.html" class="dropdown-item" aria-current="page" style="color: black; padding-top: 1.75rem; padding-bottom: 1.75rem; border-radius: 40px; font-size: 100%; font-family: 'Inter', sans-serif; font-weight: 600;"><i class="fa-solid fa-list-check"></i>Tasks</a>
@@ -120,110 +124,118 @@
           </div>
         </div>
       </nav>
+      <br>
       <div class="parent-task-container">
-        <div class="task-container">
-          <div class="heading-bar">
-            <div class="heading-tasks" style="width: 9vw; height: 7vh;">
-              <span class="texts">KEY</span>
-            </div>
-            <div class="line"></div>
-            <div class="heading-tasks" style="width: 24.5vw; height: 7vh;">
-              <span class="texts">SUMMARY</span>
-            </div>
-            <div class="line"></div>
-            <div class="heading-tasks" style="width: 10vw; height: 7vh;">
-              <span class="texts">STATUS</span>
-            </div>
-            <div class="line"></div>
-            <div class="heading-tasks" style="width: 9vw; height: 7vh;">
-              <span class="texts">COMMENT</span>
-            </div>
+        <div class="mainPanel-1"> 
+          <div class="news">
+              <span class="hottopics">Hot Topics</span>
+              <img class="swim" src="swim.png">
+              <p class="swimming">
+                  Massa tortor nibh nulla condimentum imperdiet scelerisque...
+              </p>
+              <p class="hour">
+                  2 Hours Ago
+              </p>
+              <p class="t">
+                  CNN Indonesia
+              </p>
           </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#1</span>
-            </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
-            </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(190, 83, 83, 1);">TO DO</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Fatma Nur</span>
-            </div>
+          <div class="othernews">
+              <p class="latestnews">Latest News</p>
+              <div class="boxes">
+                  <div id="cyber" class="row d-flex flex-wrap">
+                      <div class="col-12 col-xl-4 col-md-6">
+                            <div class="image-container">
+                                <img class="uclu" src="Rectangle-3.png">
+                            </div>
+                            <p class="n1">News Title Lorem Ipsum Dolor Sit Amet</p>
+                            <div class="icyazilar">
+                                <p class="n2">
+                                    1 Hour <span class="space-between">Ago</span> CNN Indonesia
+                                </p>
+                            </div>
+                      </div>
+                      <div class="col-12 col-xl-4 col-md-6">
+                        <div class="imgage-container">
+                            <img class="uclu" src="rec2.png" >
+                        </div>
+                          <p class="n1">News Title Lorem Ipsum Dolor Sit Amet</p>
+                          <div class="icyazilar">
+                              <p class="n2">
+                                  1 Hour <span class="space-between">Ago</span> CNN Indonesia
+                              </p>
+                          </div>
+                      </div>
+                      <div class="col-12 col-xl-4 col-md-6">
+                        <div class="image-container">
+                            <img class="uclu" src="rec3.png" >
+                        </div>
+                          <p class="n1">News Title Lorem Ipsum Dolor Sit Amet</p>
+                          <div class="icyazilar">
+                              <p class="n2">
+                                  1 Hour <span class="space-between">Ago</span> CNN Indonesia
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#14</span>
+        <div class="kutular">
+            <div class="ilk-kutu"> 
+                <div class="tablo">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="baslikt">
+                                <span class="tastinf">Task Title</span>
+                            </div>
+                            <br>
+                            <div class="ogeler">
+                                <span class="ogeler-1">Home Page Redesign</span>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="baslikt">
+                                <span class="tastinf">Task Description</span>
+                            </div>
+                            <br>
+                            <div class="ogeler">
+                                <span class="ogeler-2">Lorem ipsum dollars</span>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="baslikt">
+                                <span class="tastinf">Status</span>
+                            </div>
+                            <br>
+                            <div class="ogeler">
+                                <span class="ogeler-3 with-dot">In Progress</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <ul class="baslik-t">
+                    <li class="tastinf">Task Title</li>
+                    <li class="tastinf">Task Description</li>
+                    <li class="tastinf">Status</li>
+                </ul>
+                <ul class="ogeler">
+                    <li class="ogeler-1">Home Page Redesign</li>
+                    <li class="ogeler-2">Lorem ipsum dollars</li>
+                    <li class="ogeler-3">In Progress</li>
+                </ul> -->
             </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
+            <div class="son-kutu">
+                <ul class="calisanlar">
+                    <li class="baslik-p">Persons</li>
+                    <li class="list-n">Cüneyt</li>
+                    <li class="list-n">Bayram</li>
+                    <li class="list-n">Ali</li>
+                    <li class="list-n">Gökhan</li>
+                    <li class="list-n">Yahya</li>
+                </ul>
             </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(111, 211, 63, 1);">DONE</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Berkin</span>
-            </div>
-          </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#21</span>
-            </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
-            </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(190, 83, 83, 1);">TO DO</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Damla</span>
-            </div>
-          </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#38</span>
-            </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
-            </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(190, 83, 83, 1);">TO DO</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Selin</span>
-            </div>
-          </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#40</span>
-            </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
-            </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(81, 186, 220, 1);">IN PROGRESS</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Kaan</span>
-            </div>
-          </div>
-          <div class="task-bars">
-            <div class="num-container">
-              <span class="nums">#44</span>
-            </div>
-            <div class="summary-container">
-              <span class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
-            </div>
-            <div class="status-container">
-              <span class="status" style="color: rgba(81, 186, 220, 1);">IN PROGRESS</span>
-            </div>
-            <div class="name-container">
-              <span class="names">Mislina</span>
-            </div>
-          </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
