--- a/git_example/profile1.html
+++ b/git_example/profile1.html
@@ -27,24 +27,24 @@
         <div class="container-1">
             <div class="d-flex flex-column justify-content-between dikeymenu">
                 <ul class="bars">
-                    <a class="mywork" href="mainpage.html">My Work</a>
+                    <a class="mywork" href="main.html">My Work</a>
                     <!--<button class="menu" data-bs-toggle="dropdown">
                         <li>
                             <img src="menuicon.png" width="30" height="30">
                             <h1 class="menu-tit">Menu</h1>
                         </li>
-                    </button>-->
+                    </button>
                     <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 70%; height: 3.063rem; border-radius: 15px; font-family: 'Inter', sans-serif; background-color: rgba(161, 95, 244, 1); color: rgba(255, 255, 255, 1); box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.263); font-size: 1.25rem; align-items: center;">
                         <i class="fa-solid fa-bars"></i>
                         <img src="menuicon.png">
                         <span style="padding-right: 0.5rem;"> Menu</span>
-                    </button>
+                    </button>-->
                     
                     <div class="dropdown-content"  data-popper-placement="bottom-start">
                         
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Info</a>
-                            <a class="dropdown-item" href="#">Task</a>
+                            <a class="dropdown-item" href="profile1.html">Info</a>
+                            <a class="dropdown-item" href="individual_tasks.html">Task</a>
                           </div>
                     </div>
                 </ul>
@@ -67,6 +67,7 @@
                     </ul>
                 </div><br>
                 <br>
+  
                 <div class="mainPanel">
                     <div class="login-box">
                         <form class="formss">
