--- a/staj/about_us.html
+++ b/staj/about_us.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-sm bg-body-tertiary"><!--Navbar-->
     <div class="container-fluid">
       <a class="d-flex justify-content-center heading" href="#" aria-current="page" style="color: black; text-decoration: none; font-size: 2.813em !important;">MyWork</a>
-      <div class="other-buttons">
+      <div class="other-buttons ms-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Profile</a>
